// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a block button group with children 1`] = `
<div
  className="button-group is-block"
>
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    text="Button 2"
  />
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="3"
    onClick={[Function]}
    text="Button 3"
  />
</div>
`;

exports[`should render a button group with children 1`] = `
<div
  className="button-group"
>
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    text="Button 1"
  />
</div>
`;

exports[`should render a button group with children selected 1`] = `
<div
  className="button-group"
>
  <ButtonGroupButton
    aria-pressed={true}
    className="is-selected"
    isDisabled={false}
    key="1"
    onClick={[Function]}
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    text="Button 2"
  />
</div>
`;

exports[`should render an empty component 1`] = `
<div
  className="button-group"
/>
`;

exports[`should select a button 1`] = `
<div
  className="button-group"
>
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    text="Button 2"
  />
</div>
`;

exports[`should select a button 2`] = `
<div
  className="button-group"
>
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={null}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    text="Button 2"
  />
</div>
`;
